<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rongchaozhou.scorekeeper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="@dimen/heading_padding"
                android:text="@string/team_a_name"
                android:textColor="@color/colorHeading"
                android:textSize="@dimen/heading_size" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/display_padding_bottom"
                android:text="@string/initial_score"
                android:textColor="@color/colorDisplay"
                android:textSize="@dimen/display_size" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/button_margin_bottom"
                android:layout_marginLeft="@dimen/button_margin_left"
                android:layout_marginRight="@dimen/button_margin_right"
                android:onClick="addThreeForA"
                android:text="@string/get_three_points_button" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/button_margin_bottom"
                android:layout_marginLeft="@dimen/button_margin_left"
                android:layout_marginRight="@dimen/button_margin_right"
                android:onClick="addTwoForA"
                android:text="@string/get_two_points_button" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_margin_left"
                android:layout_marginRight="@dimen/button_margin_right"
                android:onClick="addOneForA"
                android:text="@string/free_throw_button" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/line_width"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/line_margin_top"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="@dimen/heading_padding"
                android:text="@string/team_b_name"
                android:textColor="@color/colorHeading"
                android:textSize="@dimen/heading_size" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/display_padding_bottom"
                android:text="@string/initial_score"
                android:textColor="@color/colorDisplay"
                android:textSize="@dimen/display_size" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/button_margin_bottom"
                android:layout_marginLeft="@dimen/button_margin_left"
                android:layout_marginRight="@dimen/button_margin_right"
                android:onClick="addThreeForB"
                android:text="@string/get_three_points_button" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/button_margin_bottom"
                android:layout_marginLeft="@dimen/button_margin_left"
                android:layout_marginRight="@dimen/button_margin_right"
                android:onClick="addTwoForB"
                android:text="@string/get_two_points_button" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_margin_left"
                android:layout_marginRight="@dimen/button_margin_right"
                android:onClick="addOneForB"
                android:text="@string/free_throw_button" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:layout_marginLeft="@dimen/button_margin_left"
        android:layout_marginRight="@dimen/button_margin_right"
        android:onClick="resetScore"
        android:text="@string/reset_button" />
</RelativeLayout>

